# fastapi_template

./: .env.sample  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
.github/workflows/: ci.yml
app/: gunicorn_web_server.py  logging.py  main.py  settings.py
app/presentation/: application.py  dependecies.py  lifespan.py  lifetime.py  middlewares.py  utils.py
app/presentation/apis/: router.py
app/presentation/apis/dummy/: __init__.py
app/presentation/apis/dummy/v1/: __init__.py  schema.py  views.py
app/presentation/apis/health_check/: views.py
app/presentation/apis/v1/: router.py
app/presentation/apis/v1/dummy/: views.py
app/repository/db/: dummy_db_repo.py  utils.py
app/service/dummy/: dummy_service.py
app/tests/: conftest.py  test_health_check.py  test_main.py
app/tests/api/: test_dummy.py
app/tests/factories/: dummy.py
docker/: Dockerfile  docker-compose.yml
